--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,7 @@
         "orchestra/testbench": "^8.0",
         "pestphp/pest": "^2.19",
         "pestphp/pest-plugin-laravel": "^2.2",
-        "pestphp/pest-plugin-livewire": "^2.1",
-        "pestphp/pest-plugin-parallel": "^0.3",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5"
+        "pestphp/pest-plugin-livewire": "^2.1"
     },
     "autoload": {
         "psr-4": {
